# Islandshast_simulator

./: .gitignore  README.md  Sensor_Back_Albin_exported.mat  Sensor_Back_Baldur_exported.mat  Sensor_Back_Sam_exported.mat  Sensor_Back_Sigge_exported.mat  config.py  data_loader.py  export_for_python.m  main.py  main_simulation.py  motion_filter.py  motion_reconstruction.py  platformio.ini  plot_raw_data_matlab.m  plotting.py  pyproject.toml  send_to_arduino.py  stewart.py  stewart_platform.py  visualization.py
Arduino Due/: platformio.ini
Arduino Due/lib/: README
Arduino Due/src/: main.cpp
raw data/: Sensor_Back_Albin.mat  Sensor_Back_Baldur.mat  Sensor_Left_Albin.mat  Sensor_Left_Baldur.mat  Sensor_Right_Albin.m4a  Sensor_Right_Albin.mat  Sensor_Right_Baldur.m4a  Sensor_Right_Baldur.mat
